Fix spacing

--- a/src/less/material/accordion.less
+++ b/src/less/material/accordion.less
@@ -4,7 +4,7 @@
         cursor: pointer;
         .transition(300ms);
         .item-inner {
-            padding-right: 35px;
+            padding-right: 42px;
             background: no-repeat -webkit-calc(~"100% - 15px") center;
             background: no-repeat calc(~"100% - 15px") center;
             .encoded-svg-background("<svg viewBox='0 0 60 120' xmlns='http://www.w3.org/2000/svg'><path d='m60 61.5-38.25 38.25-9.75-9.75 29.25-28.5-29.25-28.5 9.75-9.75z' fill='#c7c7cc'/></svg>");
